--- a/index.html
+++ b/index.html
@@ -22,16 +22,21 @@
     // 🧠 The function buildPeter builds an object of a certain shape and returns it.
     // 🧠 Example of usage:
     // buildPeter() // should return { firstName: "Peter", lastName: "Pan", age: 12 }
-    function buildPeter() {
-
+    function buildPeter() { 
+return { firstName: "Peter", lastName: "Pan", age: 12 }
     }
+
 
     // 👉 CHALLENGE 2
     // 🧠 The function buildUser takes three arguments and uses them to build an object and return it.
     // 🧠 Example of usage:
     // buildUser("John", "Smith", 30) // should return { firstName: "John", lastName: "Smith", age: 30 }
-    function buildUser(firstName, lastName, age) {
-
+  function buildUser(firstName, lastName, age) {
+const final= {}
+final.firstName = firstName
+final.lastName = lastName
+final.age = age
+return(final)
     }
 
     // 👉 CHALLENGE 3
@@ -42,18 +47,23 @@
     // 🧠 Examples of usage:
     // deletePrice({ item: "Tesla Model 3", price: 40000 }) // should return { item: "Tesla Model 3" }
     // deletePrice({ item: "Kobo Libra 2" }) // should return { item: "Kobo Libra 2", priceless: true }
-    function deletePrice() {
+    function deletePrice(ara) {
+      if (ara.price !== undefined) {delete ara.price} 
+    else {ara.priceless = true }
+    return ara
 
     }
-
     // 👉 CHALLENGE 4
     // 🧠 The function evenList takes an array as its argument and returns true if the array has an even number of elements, false otherwise.
     // 🧠 Note that the argument of the function is missing, you must write it.
     // 🧠 Examples of usage:
     // evenList(['a']) // should return false
     // evenList(['a', 'b']) // should return true
-    function evenList(arr) {
-
+ function evenList(arr) {
+      let numlength = arr.length 
+      let evennumber = numlength % 2 === 0 
+      if (evennumber) {return true} 
+        else {return false}
     }
 
     // 👉 CHALLENGE 5
@@ -62,7 +72,10 @@
     // 🧠 Examples of usage:
     // firstOrLast(['a', 'b'], true) // should return 'a'
     // firstOrLast(['a', 'b'], false) // should return 'b'
-    function firstOrLast() {
+  function firstOrLast(ary,lean) {
+
+      if(lean) {return ary[0]}
+    return ary [ary.length - 1 ]
 
     }
 
@@ -72,8 +85,9 @@
     // 🧠 Examples of usage:
     // pushElement([], 1) // should return [1]
     // pushElement(['a', 'b'], 'c') // should return ['a', 'b', 'c']
-    function pushElement() {
-
+  function pushElement(aray, vle) { let ni = aray.length 
+      aray [ni] = vle
+      return aray
     }
 
     // 👉 CHALLENGE 7
@@ -88,7 +102,18 @@
     // 🧠 At each iteration of the loop, if the current character is not "x", then add it to the end of the result array.
     // 🧠 You can merge the result array back into a string by using join. Example: ["f", "o", "o"].join("") yields "foo"
     // 🧠 Do not forget to return your rejoined string!
-    function stripX() {
+    function stripX(test) { 
+      let final = []
+      let spit = test.split ("") 
+      for (let I in spit) {
+        let ter = spit[I]  
+        if (ter !== "x") {
+          final[final.length] = ter
+        }
+      }
+      let group = final.join("") 
+      return group
+    
 
     }
 
@@ -101,8 +126,15 @@
     // ❗ Important Notes:
     // 🧠 Try to solve this problem without looking at how you solved the previous one.
     // 🧠 If you need to look, do not copy & paste code. Take a peek and then work from memory!
-    function stripChar() {
-
+    function stripChar(ing, ter) {
+      let spliter = ing.split (" ") 
+      let final = []
+      for (let I in spliter)  {
+         let terr = spliter[I] 
+      if (terr !== ter) 
+      {final [final.length] = terr }}
+      return final.join ("")
+    
     }
 
     // 👉 CHALLENGE 9
@@ -114,10 +146,16 @@
     // getProps({ lastName: "Smith", age: 35 }) // should return ["lastName"]
     // getProps({ firstName: "Jane", married: false }) // should return ["firstName"]
     // getProps({ name: "Bamby", favFood: "flowers" }) // should return ["name", "favFood"]
-    function getProps() {
+    function getProps(test) {
+      let final = []
+      for (let I in test) 
+      if(I !== "age" && I !== "married") {
+        final [final.length] = I 
+
+      }
+      return final
 
     }
-
     // 🧪 TESTS, do not work below this line
     // 🧪 TESTS, do not work below this line
     // 🧪 TESTS, do not work below this line
